--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 p-6">
   <div class="max-w-3xl mx-auto">
-    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Investasi</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard kalkulator Investasi GISBEI UPI</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <a href="#" onclick="showSection('fundamental')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Hitung Fundamental</a>
