--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Web Investasi</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 p-6">
-  <div class="max-w-3xl mx-auto">
-    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard kalkulator Investasi GISBEI UPI</h1>
+<body class="bg-gray-100 p-6 relative min-h-screen">
+  <div class="max-w-3xl mx-auto pb-16">
+    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Investasi</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <a href="#" onclick="showSection('fundamental')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Hitung Fundamental</a>
@@ -53,6 +53,11 @@
       <p>Fitur ini dalam tahap pengembangan.</p>
     </div>
   </div>
+
+  <!-- Watermark -->
+  <footer class="absolute bottom-2 right-4 text-gray-400 text-sm">
+    &copy; 2025 Raihan Pratama Putera
+  </footer>
 
   <script>
     function showSection(id) {
