--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 p-6 relative min-h-screen">
   <div class="max-w-3xl mx-auto pb-16">
-    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Kalkulator Investasi GISBEI UPI</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Investasi</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <a href="#" onclick="showSection('fundamental')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Hitung Fundamental</a>
@@ -18,16 +18,16 @@
       <a href="#" onclick="showSection('sektor')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Perbandingan Sektor</a>
     </div>
 
-   <!-- Hitung Fundamental -->
+<!-- Hitung Fundamental -->
 <div id="fundamental" class="hidden bg-white p-6 rounded-lg shadow">
   <h2 class="text-xl font-semibold mb-4">Hitung Fundamental</h2>
   <form id="fundamentalForm" class="space-y-4">
-    <div><label class="block">Total Aset</label><input type="number" id="totalAssets" class="w-full border p-2 rounded" required></div>
-    <div><label class="block">Total Liabilitas</label><input type="number" id="totalLiabilities" class="w-full border p-2 rounded" required></div>
-    <div><label class="block">Ekuitas</label><input type="number" id="equity" class="w-full border p-2 rounded" required></div>
-    <div><label class="block">Laba Bersih</label><input type="number" id="netIncome" class="w-full border p-2 rounded" required></div>
-    <div><label class="block">Jumlah Saham Beredar</label><input type="number" id="sharesOutstanding" class="w-full border p-2 rounded" required></div>
-    <div><label class="block">Harga Saham Saat Ini</label><input type="number" id="currentPrice" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Total Aset</label><input type="text" id="totalAssets" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Total Liabilitas</label><input type="text" id="totalLiabilities" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Ekuitas</label><input type="text" id="equity" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Laba Bersih</label><input type="text" id="netIncome" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Jumlah Saham Beredar</label><input type="text" id="sharesOutstanding" class="w-full border p-2 rounded" required></div>
+    <div><label class="block">Harga Saham Saat Ini</label><input type="text" id="currentPrice" class="w-full border p-2 rounded" required></div>
     <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Hitung</button>
   </form>
   <div id="resultFundamental" class="mt-6 hidden">
@@ -47,49 +47,82 @@
 </div>
 
 <script>
+    // Fungsi untuk menambahkan pemisah ribuan pada input
+function formatNumber(input) {
+  let value = input.value.replace(/\D/g, ''); // Menghapus semua non-digit
+  if (value) {
+    value = value.replace(/\B(?=(\d{3})+(?!\d))/g, '.'); // Menambahkan titik pada setiap ribuan
+  }
+  input.value = value;
+}
+
+// Mengambil input dan menambahkan event listener pada masing-masing input
+document.getElementById('totalAssets').addEventListener('input', function() {
+  formatNumber(this);
+});
+
+document.getElementById('totalLiabilities').addEventListener('input', function() {
+  formatNumber(this);
+});
+
+document.getElementById('equity').addEventListener('input', function() {
+  formatNumber(this);
+});
+
+document.getElementById('netIncome').addEventListener('input', function() {
+  formatNumber(this);
+});
+
+document.getElementById('sharesOutstanding').addEventListener('input', function() {
+  formatNumber(this);
+});
+
+document.getElementById('currentPrice').addEventListener('input', function() {
+  formatNumber(this);
+});
   // Hitung Fundamental
-  document.getElementById('fundamentalForm').addEventListener('submit', function(e) {
-    e.preventDefault(); // Mencegah form untuk submit secara default
+document.getElementById('fundamentalForm').addEventListener('submit', function(e) {
+  e.preventDefault(); // Mencegah form untuk submit secara default
 
-    // Mengambil nilai input dari form
-    const totalAssets = parseFloat(document.getElementById('totalAssets').value);
-    const totalLiabilities = parseFloat(document.getElementById('totalLiabilities').value);
-    const equity = parseFloat(document.getElementById('equity').value);
-    const netIncome = parseFloat(document.getElementById('netIncome').value);
-    const shares = parseFloat(document.getElementById('sharesOutstanding').value);
-    const price = parseFloat(document.getElementById('currentPrice').value);
+  // Mengambil nilai input dari form dan menghapus titik
+  const totalAssets = parseFloat(document.getElementById('totalAssets').value.replace(/\./g, ''));
+  const totalLiabilities = parseFloat(document.getElementById('totalLiabilities').value.replace(/\./g, ''));
+  const equity = parseFloat(document.getElementById('equity').value.replace(/\./g, ''));
+  const netIncome = parseFloat(document.getElementById('netIncome').value.replace(/\./g, ''));
+  const shares = parseFloat(document.getElementById('sharesOutstanding').value.replace(/\./g, ''));
+  const price = parseFloat(document.getElementById('currentPrice').value.replace(/\./g, ''));
 
-    // Cek apakah semua input valid
-    if (isNaN(totalAssets) || isNaN(totalLiabilities) || isNaN(equity) || isNaN(netIncome) || isNaN(shares) || isNaN(price)) {
-      alert("Pastikan semua input terisi dengan angka yang valid.");
-      return; // Jika ada input yang tidak valid, hentikan eksekusi.
-    }
+  // Cek apakah semua input valid
+  if (isNaN(totalAssets) || isNaN(totalLiabilities) || isNaN(equity) || isNaN(netIncome) || isNaN(shares) || isNaN(price)) {
+    alert("Pastikan semua input terisi dengan angka yang valid.");
+    return; // Jika ada input yang tidak valid, hentikan eksekusi.
+  }
 
-    // Melakukan perhitungan
-    const eps = netIncome / shares;
-    const per = price / eps;
-    const bvps = equity / shares;
-    const pbv = price / bvps;
-    const roa = (netIncome / totalAssets) * 100;
-    const roe = (netIncome / equity) * 100;
-    const dar = totalLiabilities / totalAssets;
-    const der = totalLiabilities / equity;
-    const marketCap = shares * price;
+  // Melakukan perhitungan
+  const eps = netIncome / shares;
+  const per = price / eps;
+  const bvps = equity / shares;
+  const pbv = price / bvps;
+  const roa = (netIncome / totalAssets) * 100;
+  const roe = (netIncome / equity) * 100;
+  const dar = totalLiabilities / totalAssets;
+  const der = totalLiabilities / equity;
+  const marketCap = shares * price;
 
-    // Menampilkan hasil perhitungan ke dalam elemen yang sesuai
-    document.getElementById('epsResult').textContent = eps.toFixed(2);
-    document.getElementById('perResult').textContent = per.toFixed(2);
-    document.getElementById('bvpsResult').textContent = bvps.toFixed(2);
-    document.getElementById('pbvResult').textContent = pbv.toFixed(2);
-    document.getElementById('roaResult').textContent = roa.toFixed(2);
-    document.getElementById('roeResult').textContent = roe.toFixed(2);
-    document.getElementById('darResult').textContent = dar.toFixed(2);
-    document.getElementById('derResult').textContent = der.toFixed(2);
-    document.getElementById('marketCapResult').textContent = marketCap.toLocaleString();
+  // Menampilkan hasil perhitungan ke dalam elemen yang sesuai
+  document.getElementById('epsResult').textContent = eps.toFixed(2);
+  document.getElementById('perResult').textContent = per.toFixed(2);
+  document.getElementById('bvpsResult').textContent = bvps.toFixed(2);
+  document.getElementById('pbvResult').textContent = pbv.toFixed(2);
+  document.getElementById('roaResult').textContent = roa.toFixed(2);
+  document.getElementById('roeResult').textContent = roe.toFixed(2);
+  document.getElementById('darResult').textContent = dar.toFixed(2);
+  document.getElementById('derResult').textContent = der.toFixed(2);
+  document.getElementById('marketCapResult').textContent = marketCap.toLocaleString();
 
-    // Menampilkan hasil
-    document.getElementById('resultFundamental').classList.remove('hidden');
-  });
+  // Menampilkan hasil
+  document.getElementById('resultFundamental').classList.remove('hidden');
+});
 </script>
 
         <!-- Dividen -->
@@ -173,11 +206,64 @@
       document.getElementById(id).classList.remove('hidden');
     }
 
-    // Analisis Dividen
+    // Format angka dengan titik
+    function formatNumberWithDots(value) {
+      return value.replace(/\D/g, '').replace(/\B(?=(\d{3})+(?!\d))/g, ".");
+    }
+
+    function getRawValue(id) {
+      const input = document.getElementById(id);
+      return parseFloat((input.dataset.raw || input.value || '').replace(/\./g, '')) || 0;
+    }
+
+    document.querySelectorAll('input[type=number]').forEach(input => {
+      input.type = 'text';
+      input.addEventListener('input', function () {
+        const digitsOnly = this.value.replace(/\./g, '');
+        const formatted = formatNumberWithDots(digitsOnly);
+        this.value = formatted;
+        this.dataset.raw = digitsOnly;
+      });
+    });
+
+    // Fundamental
+    document.getElementById('fundamentalForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const totalAssets = getRawValue('totalAssets');
+      const totalLiabilities = getRawValue('totalLiabilities');
+      const equity = getRawValue('equity');
+      const netIncome = getRawValue('netIncome');
+      const sharesOutstanding = getRawValue('sharesOutstanding');
+      const currentPrice = getRawValue('currentPrice');
+
+      const eps = netIncome / sharesOutstanding;
+      const per = currentPrice / eps;
+      const bvps = equity / sharesOutstanding;
+      const pbv = currentPrice / bvps;
+      const roa = (netIncome / totalAssets) * 100;
+      const roe = (netIncome / equity) * 100;
+      const dar = totalLiabilities / totalAssets;
+      const der = totalLiabilities / equity;
+      const marketCap = sharesOutstanding * currentPrice;
+
+      document.getElementById('epsResult').textContent = eps.toFixed(2);
+      document.getElementById('perResult').textContent = per.toFixed(2);
+      document.getElementById('bvpsResult').textContent = bvps.toFixed(2);
+      document.getElementById('pbvResult').textContent = pbv.toFixed(2);
+      document.getElementById('roaResult').textContent = roa.toFixed(2);
+      document.getElementById('roeResult').textContent = roe.toFixed(2);
+      document.getElementById('darResult').textContent = dar.toFixed(2);
+      document.getElementById('derResult').textContent = der.toFixed(2);
+      document.getElementById('marketCapResult').textContent = marketCap.toLocaleString();
+
+      document.getElementById('resultFundamental').classList.remove('hidden');
+    });
+
+    // Dividen
     document.getElementById('dividenForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const dps = parseFloat(document.getElementById('dps').value);
-      const harga = parseFloat(document.getElementById('dividenHargaSaham').value);
+      const dps = getRawValue('dps');
+      const harga = getRawValue('dividenHargaSaham');
       const yieldValue = (dps / harga) * 100;
       document.getElementById('yieldResult').textContent = yieldValue.toFixed(2);
       document.getElementById('resultDividen').classList.remove('hidden');
@@ -186,9 +272,9 @@
     // DCF
     document.getElementById('valuasiForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const fcf = parseFloat(document.getElementById('fcf').value);
-      const growth = parseFloat(document.getElementById('growthRate').value) / 100;
-      const discount = parseFloat(document.getElementById('discountRate').value) / 100;
+      const fcf = getRawValue('fcf');
+      const growth = getRawValue('growthRate') / 100;
+      const discount = getRawValue('discountRate') / 100;
       const dcfValue = fcf * (1 + growth) / (discount - growth);
       document.getElementById('dcfResult').textContent = dcfValue.toLocaleString();
       document.getElementById('resultDCF').classList.remove('hidden');
@@ -205,13 +291,13 @@
       document.getElementById('resultPiotroski').classList.remove('hidden');
     });
 
-    // Perbandingan Sektor
+    // Sektor
     document.getElementById('sektorForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const per = {
-        'Sektor A': parseFloat(document.getElementById('perA').value),
-        'Sektor B': parseFloat(document.getElementById('perB').value),
-        'Sektor C': parseFloat(document.getElementById('perC').value)
+        'Sektor A': getRawValue('perA'),
+        'Sektor B': getRawValue('perB'),
+        'Sektor C': getRawValue('perC')
       };
       const terbaik = Object.keys(per).reduce((a, b) => per[a] < per[b] ? a : b);
       document.getElementById('sektorTerbaik').textContent = terbaik;
